--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Baze Soundboard</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="css/material.min.css">
-    <link rel="stylesheet" href="css/theme.css">
+    <link rel="stylesheet" href="./css/material.min.css">
+    <link rel="stylesheet" href="./css/theme.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -45,8 +45,8 @@
       <source>
     </audio>
 
-    <script src="bower_components/material-design-lite/material.min.js"></script>
-    <script src="bower_components/handlebars/handlebars.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="./bower_components/material-design-lite/material.min.js"></script>
+    <script src="./bower_components/handlebars/handlebars.min.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
