--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,9 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="css/material.min.css">
   <link rel="stylesheet" href="css/app.css">
+
+  <script src="./bower_components/dialog-polyfill/dialog-polyfill.js"></script>
+  <link rel="stylesheet" href="./bower_components/dialog-polyfill/dialog-polyfill.css">
 </head>
 <body>
   <div ng-view></div>
@@ -47,6 +50,8 @@
   <script src="./bower_components/material-design-lite/material.min.js"></script>
 
   <script src="./js/app.js"></script>
+
+  <script src="./js/factories/auth.js"></script>
 
   <script src="./js/config/routeProvider.js"></script>
   <script src="./js/controllers/SoundboardListController.js"></script>
