Added dev-page with functionality for adding new entries

--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,7 @@
   <script src="./js/config/routeProvider.js"></script>
   <script src="./js/controllers/SoundboardListController.js"></script>
   <script src="./js/controllers/SoundboardController.js"></script>
+  <script src="./js/controllers/DevController.js"></script>
 
   <!--Google Analytics-->
   <script>
