--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,8 @@
 
   <script src="./js/factories/auth.js"></script>
 
+  <script src="./js/filters/favorizedFilter.js"></script>
+
   <script src="./js/config/routeProvider.js"></script>
   <script src="./js/controllers/SoundboardListController.js"></script>
   <script src="./js/controllers/SoundboardController.js"></script>
